# solem-blip-ha

./: .gitignore  ACKNOWLEDGMENTS.md  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  hacs.json  pyproject.toml  pytest.ini  quality_scale.yaml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: attest-release.yml  ci.yml
custom_components/solem_blip/: __init__.py  api.py  base.py  binary_sensor.py  bluetooth.py  bluetooth_issue.py  button.py  config_entry.py  config_flow.py  const.py  coordinator.py  coordinator_descriptors.py  coordinator_irrigation.py  coordinator_polling.py  coordinator_publish.py  diagnostics.py  entity.py  entity_descriptions.py  entity_identity.py  icons.json  manifest.json  migrate.py  models.py  number.py  repairs.py  schedule.py  sensor.py  services.py  services.yaml  strings.json  util.py  valve.py
custom_components/solem_blip/brand/: README.md
custom_components/solem_blip/translations/: en.json  it.json
docs/: branching_and_release.md
tests/: conftest.py  test_apply_status.py  test_bluetooth.py  test_config_flow.py  test_config_flow_extended.py  test_coordinator.py  test_coordinator_descriptors.py  test_coordinator_irrigation.py  test_coordinator_irrigation_extended.py  test_coordinator_polling.py  test_coordinator_reconfig.py  test_coordinator_updates.py  test_diagnostics.py  test_entities.py  test_init.py  test_migrate.py  test_platforms.py  test_program_running_binary.py  test_repairs.py  test_schedule.py  test_sensor_properties.py  test_services.py  test_util.py
