[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solem-blip-ha"
version = "1.1.9"
description = "Home Assistant integration for Solem BL-IP irrigation controllers"
requires-python = ">=3.14"
dependencies = [
    "solem-blip-ble>=0.1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.0",
    "pytest-homeassistant-custom-component==0.13.333",
]

[tool.setuptools.packages.find]
where = ["custom_components"]
namespaces = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
