[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solem-blip-ha"
version = "1.2.18"
description = "Home Assistant integration for Solem BL-IP irrigation controllers"
requires-python = ">=3.14"
dependencies = [
    "solem-blip-ble==0.1.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.0",
    "pytest-homeassistant-custom-component==0.13.333",
    "mypy>=1.13",
]

[tool.setuptools.packages.find]
where = ["custom_components"]
namespaces = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=custom_components.solem_blip --cov-fail-under=95 --cov-report=term-missing"

[tool.mypy]
python_version = "3.14"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
files = ["custom_components/solem_blip"]
